tests/snapshots/optimizer_tests__optimizer_tests__partial_cache_results.snap
---
source: tests/optimizer_tests.rs
expression: vanilla_results_str
---
+----------+
| count(*) |
+----------+
| 288      |
+----------+
